sumo/tests/netconvert/errors/unknown_option/output.netconvert.exe
SUMO netconvert
 (c) DLR/ZAIK 2000-2006; http://sumo.sourceforge.net
 Version 0.9.5
 Use --help to get the list of options.
